--- a/Prj4ProjektRapport/sektioner/forside.tex
+++ b/Prj4ProjektRapport/sektioner/forside.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../prj3projektrapport.tex
+% !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 \thispagestyle{empty}
 	{\centering
@@ -11,7 +11,7 @@
 	\vspace{2cm}
 	{\Large
 	13114 - Jeppe Hansen\\ 
-	20117419 - Kenneth Roliggaard\\
+	Laurids\\
 	201504663 - Jakob Wilbrandt\\ 
 	201504782 - Frederik L. Højgaard\\ 
 	201505026 - Henrik Lauritsen\\ }
