--- a/prj4procesdokumentation/prj4procesdokumentation.tex
+++ b/prj4procesdokumentation/prj4procesdokumentation.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, 11pt,oneside,openany, danish]{memoir} % Starter dokumentet af klassen memoir
 
-
+%Det er sku fjollet
 %%%%%%%%%%%%%%%%%%%%%%%
 		       % PREAMBLE %			
 %%%%%%%%%%%%%%%%%%%%%%%
