rettet latex filer

--- a/Prj4ProjektRapport/sektioner/forside.tex
+++ b/Prj4ProjektRapport/sektioner/forside.tex
@@ -4,20 +4,20 @@
 	{\centering
 	{\scshape\LARGE Aarhus Universitet \par}
 	\vspace{1cm}
-	{\scshape\Large 3. semesterprojekt gruppe 5\par}
+	{\scshape\Large 4. semesterprojekt gruppe1\par}
 	{\scshape\Large Projekt rapport\par}
 	\vspace{1.5cm}
-	{\huge\bfseries SensorSizer\par}
+	{\huge\bfseries Spændingsregulator\par}
 	\vspace{2cm}
 	{\Large
+	201509249 - Caroline Møller Sørensen\\
+	201611140 - Sophia Amailie Mortensen\\
 	13114 - Jeppe Hansen\\ 
-	Laurids\\
-	201504663 - Jakob Wilbrandt\\ 
-	201504782 - Frederik L. Højgaard\\ 
-	201505026 - Henrik Lauritsen\\ }
+	201505115 - Laurids Givskov Jørgensen\\
+	201508333 - Søren Jensen\\  }
 	\vfill
 	vejleder\par
-	Tore Arne Skogberg
+	Emir Pasic
 
 	\vfill
 
