--- a/prj4procesdokumentation/sektioner/forside.tex
+++ b/prj4procesdokumentation/sektioner/forside.tex
@@ -1,28 +1,29 @@
-% !TEX root = ../prj3procesbilag.tex
+% !TEX root = ../prj4procesdokumentation.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
+
 \thispagestyle{empty}
-	{\centering
+{\centering
 	{\scshape\LARGE Aarhus Universitet \par}
 	\vspace{1cm}
-	{\scshape\Large 3. semesterprojekt gruppe 5\par}
+	{\scshape\Large 4. semesterprojekt gruppe 1\par}
 	{\scshape\Large Proces dokumentation\par}
 	\vspace{1.5cm}
-	{\huge\bfseries SensorSizer\par}
+	{\huge\bfseries Spændingsregulator\par}
 	\vspace{2cm}
 	{\Large
-	13114 - Jeppe Hansen\\ 
-	20117419 - Kenneth Roliggaard\\
-	201504663 - Jakob Wilbrandt\\ 
-	201504782 - Frederik L. Højgaard\\ 
-	201505026 - Henrik Lauritsen\\ 
-	201505665 - Mathias L. Friis\\ 
-	201507743 - Gustav A. Gammelgaard\\}
+		201509249 - Caroline Møller Sørensen\\
+		201611140 - Sophia Amailie Mortensen\\
+		13114 - Jeppe Hansen\\ 
+		201505115 - Laurids Givskov Jørgensen\\
+		201508333 - Søren Jensen\\  }
 	\vfill
 	vejleder\par
-	Tore Arne Skogberg
-
+	Emir Pasic
+	
 	\vfill
-
+	
 	{\large \today\par}
-\par}
+	\par}
+
+
 
