--- a/Proces Dokumentation/sektioner/21-feb.tex
+++ b/Proces Dokumentation/sektioner/21-feb.tex
@@ -1,16 +1,23 @@
 % !TEX root = ../prj4procesdokumentation.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
-\chapter*{03 Maj 2016}
+\chapter*{21 Feb 2017}
 
 \section*{Agenda}
 
-\textbf{Mødested:}  \\
-\textbf{Mødeleder:}  \\
-\textbf{Inviteret til mødet:} \\\\
+\textbf{Mødested: Shannon}  \\
+\textbf{Inviteret til mødet: Alle} \\\\
 \textbf{Dagsorden:}\\
 
 \begin{itemize}
-	\item Status siden sidst
+	\item Fokuspunkter \\
+Hovedfokus skal være trin kobleren – vi har en transformer for vi kan teste de harmoniske, men fokus er et system som fungerer
+Ved en transmissionslinje ser vi på spændingsfaldet – vi opbygger et system som består af modstande og spoler – impedanser som belastning – alt efter en bestemt belastning vælger vi at justerer spændingen – vi kan lave et simuleringssystem 
+Undersøg hvordan løsningerne er implementeret i dag. 
+Vi kan kontakte Energinet.dk eller Dansk Energi – vi kan få et skema og se hvordan forsyningsnettet ser ud: dispositionstransformer med 60/10. 
+Vi udvikler et system – her kan vi se på de harmoniske. Vi måler på frekvenserne for at se på indholdet af de harmoniske. – altså observering. Dette kan vises på en skræm for at inddrage IKN. 
+Spændingsniveau: bestemmer selv – der er mulighed for 230V
+Signalgeneratoreren virker bed 20-30 V – det kunne
+
 	\item Gennemgang af review foretaget på os
 	\item Eventuelt andet
 \end{itemize}
