Projketrapport struktur ok

--- a/Projekt Rapport/prj4projektrapport.tex
+++ b/Projekt Rapport/prj4projektrapport.tex
@@ -100,10 +100,13 @@ linkcolor=Black, citecolor=Black]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \include{sektioner/forside}
+
 \frontmatter
 
 %%%%%%%%%%%%%%%%%%%%%%%
              % RESUME & ABSTRACT %			
+\include{sektioner/Resume}
+\include{sektioner/Abstract}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -111,12 +114,25 @@ linkcolor=Black, citecolor=Black]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%
          % INDHOLDSFORTEGNELSE %			
+\include{sektioner/Indholdsfortegnelse}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \tableofcontents
 
 %%%%%%%%%%%%%%%%%%%%%%%
                         % KAPITLER %			
+\include{sektioner/Forord}
+\include{sektioner/Termliste}
+\include{sektioner/Indledning}
+\include{sektioner/Krav}
+\include{sektioner/Foranalyse}
+\include{sektioner/Arkitektur}
+\include{sektioner/DesignOgImplementering}
+\include{sektioner/ResultatOgDiskussion}
+\include{sektioner/FremtidigtArbejde}
+\include{sektioner/Konklusion}
+\include{sektioner/Udviklingsvaerktoejer}
+\include{sektioner/Bibliografi}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \mainmatter
