--- a/Projekt Dokumentation/prj4projektdokumentation.tex
+++ b/Projekt Dokumentation/prj4projektdokumentation.tex
@@ -124,7 +124,12 @@ linkcolor=Black, citecolor=Black]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \mainmatter
-
+\input{sektioner/Projektbeskrivelse}
+\input{sektioner/kravspecifikation}
+\input{sektioner/Systembeskrivelse}
+\input{sektioner/MoSCoW}
+\input{sektioner/FunktionelleKrav}
+\input{sektioner/IkkeFunktionelleKrav}
 \printbibliography
 
 \end{document}
