--- a/Proces Dokumentation/sektioner/forside.tex
+++ b/Proces Dokumentation/sektioner/forside.tex
@@ -13,9 +13,10 @@
 	{\Large
 		201509249 - Caroline Møller Sørensen\\
 		201611140 - Sophia Amailie Mortensen\\
-		13114 - Jeppe Hansen\\ 
+		xxxxxxxxx - Dennis Slot Larsen \\
 		201505115 - Laurids Givskov Jørgensen\\
-		201508333 - Søren Jensen\\  }
+		201508333 - Søren Jensen\\
+	13114 - Jeppe Hansen\\   }
 	\vfill
 	vejleder\par
 	Emir Pasic
