--- a/Projekt Dokumentation/sektioner/kravspecifikation/kravspecifikation.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/kravspecifikation.tex
@@ -1,3 +1,3 @@
-% !TEX root = ../prj4projektdokumentation.tex
+% !TEX root = ../../prj4projektdokumentation.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 \chapter{Kravspecifikation}
