Opdatering af kravsspec - sendes til emir

--- a/Projekt Dokumentation/sektioner/Projektbeskrivelse.tex
+++ b/Projekt Dokumentation/sektioner/Projektbeskrivelse.tex
@@ -2,5 +2,5 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \chapter{Projektbeskrivelse}
-Hej her skal der stå projektbeskrivelse....
-
+Formålet med dette projekt, er at opbygge et system, der simulerer det danske transmissionssystem. Systemet skal bestå af en spændingsregulator (trinkobler), en transmissionslinje og en varierende belastning. Det ønskes at måle strøm, spænding, power factor og effektretning i systemet, således at spændingsregulatoren hele tiden kan holde spændingen på +- et givent niveau, selvom belastningen ændres. Systemet skal have to indstillinger – en til manuel valg af spændingsniveau og en til automatisk valg af passende spændingsniveau. 
+Det ønskes desuden at kunne måle frekvensindholdet i systemet for at kunne observere et eventuelt indhold af harmoniske. Det er et krav, at målte værdier i systemet vises på en skærm. 
