--- a/Projekt Dokumentation/sektioner/forside.tex
+++ b/Projekt Dokumentation/sektioner/forside.tex
@@ -12,12 +12,12 @@
 	{\Large
 		201509249 - Caroline Møller Sørensen\\
 		201611140 - Sophia Amailie Mortensen\\
-		 xxxx	- Dennis Slot Larsen \\
+		201505195 - Dennis Slot Larsen \\
 		201505115 - Laurids Givskov Jørgensen\\
 		201508333 - Søren Jensen\\
 		13114 - Jeppe Hansen\\  }
 	\vfill
-	vejleder\par
+	Vejleder\par
 	Emir Pasic
 	
 	\vfill
