--- a/Projekt Dokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -22,23 +22,24 @@
 			\midrule
 			\bfseries{Forudsætninger:} 		& At systemet er funktionelt og i automatisk mode\\
 			\midrule
-			\bfseries{Resultat:} 			& systemet er i manuel mode \\
+			\bfseries{Resultat:} 			& Systemet er i manuel mode \\
 			\midrule
 			\bfseries{Hovedscenariet:} 	& \\
 			
 			
 			1 	& Brugeren trykker "Manuel styring" på skærmen.\\
-			2 	& Systemet er nu i manuel mode.\\			
+			2	& Systemet skifter til "Manuel mode" \\
+			3 	& Systemet viser mulige spændingsniveauer på skærm 	\\
 			
 			\bottomrule
 			
 		\end{tabularx}
 	\end{threeparttable}
-	\caption{Fully dressed use case for UC1 - start manuel styring}
+	\caption{Fully dressed use case for UC1 - Start manuel styring}
 	\label{table:UC1}
 \end{table}
 
-\subsection{Usecase 2 - stop manuel styring}
+\subsection{Usecase 2 - Stop manuel styring}
 
 \begin{table}[H]
 	\centering
@@ -64,13 +65,14 @@
 			
 			
 			1 	& Brugeren trykker "Autmatisk styring" på skærmen.\\
-			2 	& Systemet er nu i automatisk mode.\\			
+			2 	& Systemet skifter til automatisk mode.\\		
+				
 			
 			\bottomrule
 			
 		\end{tabularx}
 	\end{threeparttable}
-	\caption{Fully dressed use case for UC2 - stop manuel styring}
+	\caption{Fully dressed use case for UC2 - Stop manuel styring}
 	\label{table:UC2}
 \end{table}
 
@@ -84,7 +86,7 @@
 			\toprule
 			\bfseries{Navn:}				& UC3 - Skift trin  \\
 			\midrule
-			\bfseries{Mål:} 				& at skifte trin på transformeren \\
+			\bfseries{Mål:} 				& At skifte trin på transformeren \\
 			\midrule
 			\bfseries{Initiering:} 			& Initieres af brugeren. \\
 			\midrule
@@ -106,6 +108,6 @@
 			
 		\end{tabularx}
 	\end{threeparttable}
-	\caption{Fully dressed use case for UC3 - skift trin}
+	\caption{Fully dressed use case for UC3 - Skift trin}
 	\label{table:UC3}
 \end{table}
