--- a/Projekt Dokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -2,3 +2,26 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Ikke funktionelle krav}
+
+\subsection{Spændingsregulator}
+
+Måle spændingen ved transformatoren og belastningen op til 20 V+-10% \\
+Måle strøm (indsæt værdi) \\
+Måle faseforskydning/power factor \\
+Automatisk regulering fra 230V til 20V. \\
+
+
+\subsection{Transmissionslinje}
+100 km Pi-kreds simulering \\
+
+
+\subsection{Belastning}
+Forbruger simulering \\
+Belastning der variere +- (belastningsværdi)\\
+
+
+
+\subsection{Brugergrænseflade}
+(Beskrivelse af skræm på PLC’en) \\
+Indsæt billede \\
+
