--- a/Projekt Dokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -2,3 +2,18 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{MoSCoW}
+
+\begin{itemize}
+\item{Systemet skal bestå af en trin transformator 230/20V}
+\item{Systemet skal måle spændingen, strømmen, effektretning og power factor}
+\item{Systemet skal vise data på skærm/brugergrænseflade}
+\item{Systemet skal simulere en transmissionslinje og belastning}
+\item{Systemet skal bestå af en manuel spændingsregulering}
+\item{Systemet burde bestå af en automatisk spændingsregulering}
+\item{Systemet burde kunne måle harmoniske}
+\item{Systemet kunne have en log}
+\item{Systemet kunne have flere transmissionslinjer}
+\item{Systemet kunne have flere belastninger}
+\item{Systemet vil ikke kunne fjerne harmoniske} 
+\end{itemize}
+
