--- a/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
@@ -2,3 +2,22 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Systembeskrivelse}
+
+Systembeskrivelsen kommer senere..
+
+
+\subsection{Termliste}
+
+\begin{table}[htbp]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Term} 	& \textbf{Beskrivelse} \\\hline
+Spændingsregaulator	& Består af en transformer og tilkoblet sensorer \\\hline
+Trin 	& Trin af spændingsniveau \\\hline
+
+\end{tabular}
+\caption{Termbeskrivelse}
+\label{tab:termbeskrivelsen}
+
+\end{table}
