--- a/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
@@ -3,7 +3,7 @@
 
 \section{Systembeskrivelse}
 
-Systembeskrivelsen kommer senere.. Lige om snart
+Systembeskrivelsen kommer senere.. Lige om snart nu her
 
 
 \subsection{Termliste}
