--- a/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
+++ b/Projekt Dokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
@@ -3,8 +3,7 @@
 
 \section{Systembeskrivelse}
 
-Systembeskrivelsen kommer senere.. Lige om snart nu her test test
-
+Systembeskrivelsen kommer senere.. Lige om snart nu her 
 
 \subsection{Termliste}
 
