Smårettelser i kravsspec efter møde med Emir

--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -9,10 +9,9 @@
 \item{Systemet skal vise data på skærm/brugergrænseflade}
 \item{Systemet skal simulere en transmissionslinje og belastning}
 \item{Systemet skal bestå af en manuel spændingsregulering}
+\item{Systemet skal kunne måle harmoniske}
 \item{Systemet burde bestå af en automatisk spændingsregulering}
-\item{Systemet burde kunne måle harmoniske}
 \item{Systemet kunne have en log}
-\item{Systemet kunne have flere transmissionslinjer}
 \item{Systemet kunne have flere belastninger}
 \item{Systemet vil ikke kunne fjerne harmoniske} 
 \end{itemize}
