--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -130,6 +130,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/kravspecifikation/MoSCoW}
 \input{sektioner/kravspecifikation/FunktionelleKrav}
 \input{sektioner/kravspecifikation/IkkeFunktionelleKrav}
+\input{sektioner/foranalyse}
 \printbibliography
 
 \end{document}
