--- a/ProjektDokumentation/sektioner/foranalyse.tex
+++ b/ProjektDokumentation/sektioner/foranalyse.tex
@@ -4,10 +4,10 @@
 \chapter{Foranalyse}
 
 \section{Valg af transformer}
-Emir udleverede to transformere. Den ene var der ingen mærkeplade og ledninger var alle samme farve. Den anden har mærkeplade og forskellige farvet ledninger. De to transformere blev begge undersøgt i laboratoriet, med en 18VAC på primærside, derefter måltes spændingen på de forskellige trin. Transformeren uden mærkeplade hoppede små skridt fra ca 3 - 4.5V, hvor transformeren med mærkeplade havde skridt på 1 V fra 0 til 8V. Gruppen blev enige om at det var ligegyldigt om det var små eller store skridt transformeren hoppede, bare protypen blev lavet så den passede til transformeren. Det blev derfor besluttet at anvende transformeren med mærkeplade og forskellige farvet ledninger. 
+Emir udleverede to transformere. Den ene er der ingen mærkeplade og ledningerne var alle samme farve. Den anden har mærkeplade og forskellige farvet ledninger. De to transformere blev begge undersøgt i laboratoriet, med en 18VAC på primærside, derefter måltes spændingen på de forskellige trin. Transformeren uden mærkeplade hoppede små skridt fra ca 3 - 4.5V, hvor transformeren med mærkeplade havde skridt på 1 V fra 0 til 8V. Gruppen blev enige om at det var ligegyldigt om det var små eller store skridt transformeren hoppede, bare protypen blev lavet så den passede til transformeren. Det blev derfor besluttet at anvende transformeren med mærkeplade og forskellige farvet ledninger. 
 
 \section{Valg af styrings enhed}
-Det er besluttet at lave styringen på PLC da den virker ideel til at lave automationen til styring af trintransformeren, samtidig med at den kan få input fra sensorer og vise værdiger på en brugergrænseflade. Derudover kan kurset introduktion til automation også inddrages i projektet.
+Det er besluttet at lave styringen på PLC da der virker ideelt til at lave automationen til styring af trintransformeren. PLC'en kan modtage indput fra sensorer og derefter styre hvilket trin transformeren skal anvende. Derudover kan kurset introduktion til automation også inddrages i projektet.
 
 \section{Valg af sensorer}
 
