adding aktør beskrivelse

--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -3,6 +3,9 @@
 
 \section{Funktionelle krav}
 
+\subsection{Aktør Beskrivelse}
+\textbf{Brugeren} er den primær aktør. Er en sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
+
 \subsection{Usecase 1 - Start manuel styring}
 \begin{table}[H]
 	\centering
