--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -11,13 +11,13 @@ Måle faseforskydning/power factor \\
 Automatisk regulering fra 230V til 20V. \\
 
 
-\subsection{Transmissionslinje}
-100 km Pi-kreds simulering \\
+\subsection{Distributionslinje}
+simulering af distributionslinje fra transformere til forbrugere  \\
 
 
 \subsection{Belastning}
 Forbruger simulering \\
-Belastning der variere +- (belastningsværdi)\\
+Belastning der variere $\pm$ (belastningsværdi)\\
 
 
 
