tilføjet usecasediagram i latex

--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -6,6 +6,15 @@
 \subsection{Aktør Beskrivelse}
 \textbf{Brugeren} er den primær aktør. Er en sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
 
+\subsection{Usecase Diagram}
+
+\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.5\textwidth]{Figure/UsecaseDiagram}
+	\caption{Usecase Diagram}
+	\label{fig:UsecaseDiagram}
+\end{figure}
+
 \subsection{Usecase 1 - Start manuel styring}
 \begin{table}[H]
 	\centering
