Bud på problemformulering. Skal det formuleres som et spørgsmål?

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -124,6 +124,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \mainmatter
+\input{sektioner/Problemformulering}
 \input{sektioner/Projektbeskrivelse}
 \input{sektioner/kravspecifikation/kravspecifikation}
 \input{sektioner/kravspecifikation/Systembeskrivelse}
