Rigtbillede sat ind i projektbeskrivelsen

--- a/ProjektDokumentation/sektioner/Projektbeskrivelse.tex
+++ b/ProjektDokumentation/sektioner/Projektbeskrivelse.tex
@@ -8,3 +8,9 @@ I dette projekt vil fokus være på stykket fra distributionstransformer og ud t
 Det ønskes desuden at kunne måle frekvensindholdet i systemet for at kunne observere et eventuelt indhold af harmoniske. De harmoniske i systemet er højfrekvente og vil afsætte varme i transformerne og dermed forkorte deres levetid. Det er derfor relevant at kende til indholdet af disse.\\ 
 Det er et krav, at målte værdier i systemet vises på en skærm. 
 
+\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.7\textwidth]{Figure/RigtBillede}
+	\caption{Visuel fremvisning af system}
+	\label{fig:Rigtbillede}
+\end{figure}
