BDD afsnit påbegyndt
Mangler at skriv beskrivelse af styringsenhed og trinskifter

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -131,6 +131,9 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/kravspecifikation/MoSCoW}
 \input{sektioner/kravspecifikation/FunktionelleKrav}
 \input{sektioner/kravspecifikation/IkkeFunktionelleKrav}
+\input{sektioner/Arkitektur/Arkitektur}
+\input{sektioner/Arkitektur/BDD}
+\input{sektioner/Arkitektur/IBD}
 \input{sektioner/foranalyse}
 \printbibliography
 
