tilføjet allokeringsdiagram og rettet foranalyse

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -134,6 +134,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/Arkitektur}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
+\input{sektioner/Arkitektur/AllokeringsDiagram}
 \input{sektioner/foranalyse}
 \printbibliography
 
