--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -4,10 +4,10 @@
 \section{MoSCoW}
 
 \begin{itemize}
-\item{Systemet skal bestå af en trin transformator 230/20V}
+\item{Systemet skal bestå af en trin transformator 230/20V der skifter mellem tre trin (??)}
 \item{Systemet skal måle spændingen, strømmen, effektretning og power factor}
 \item{Systemet skal vise data på skærm/brugergrænseflade}
-\item{Systemet skal simulere en transmissionslinje og belastning}
+\item{Systemet skal simulere en distributionslinje og belastning}
 \item{Systemet skal bestå af en manuel spændingsregulering}
 \item{Systemet skal kunne måle harmoniske}
 \item{Systemet burde bestå af en automatisk spændingsregulering}
