Udkast til accepttestspecifikation

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -131,6 +131,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/kravspecifikation/MoSCoW}
 \input{sektioner/kravspecifikation/FunktionelleKrav}
 \input{sektioner/kravspecifikation/IkkeFunktionelleKrav}
+\input{sektioner/Accepttestspecifikation/accepttestspecifikation}
+\input{sektioner/Accepttestspecifikation/FunktionelleKrav}
 \input{sektioner/Arkitektur/Arkitektur}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
