Udkast til accepttestspecifikation

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -133,6 +133,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/kravspecifikation/IkkeFunktionelleKrav}
 \input{sektioner/Accepttestspecifikation/accepttestspecifikation}
 \input{sektioner/Accepttestspecifikation/FunktionelleKrav}
+\input{sektioner/Accepttestspecifikation/IkkeFunktionelleKrav}
 \input{sektioner/Arkitektur/Arkitektur}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
