--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -32,6 +32,8 @@
 \usepackage{threeparttable}
 \usepackage[tableposition=top]{caption}
 \usepackage{tabularx}
+\usepackage{multirow}					% For at lave pæne tabeller
+\usepackage{hhline}						% For at lave endnu pænere tabller
 \newcolumntype{C}{>{\let\newline\\\arraybackslash\hspace{0pt}}X}
 
 %matematik
