Tilføjet punkt til Moscow-analysen. (decentral producent)

--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -13,6 +13,7 @@
 \item{Systemet burde bestå af en automatisk spændingsregulering}
 \item{Systemet kunne have en log}
 \item{Systemet kunne have flere belastninger}
+\item{Distributionslinjen kunne indeholde en decentral producent, som giver anledning til overspændinger på nettet}
 \item{Systemet vil ikke kunne fjerne harmoniske} 
 \end{itemize}
 
