rettet til review 1

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -128,6 +128,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \mainmatter
 \input{sektioner/Problemformulering}
 \input{sektioner/Projektbeskrivelse}
+\input{sektioner/Termliste}
 \input{sektioner/kravspecifikation/kravspecifikation}
 \input{sektioner/kravspecifikation/Systembeskrivelse}
 \input{sektioner/kravspecifikation/MoSCoW}
