--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -4,16 +4,16 @@
 \section{MoSCoW}
 
 \begin{itemize}
-\item{Systemet skal bestå af en trin transformator 230/20V der skifter mellem tre trin (??)}
-\item{Systemet skal måle spændingen, strømmen, effektretning og power factor}
-\item{Systemet skal vise data på skærm/brugergrænseflade}
-\item{Systemet skal simulere en distributionslinje og belastning}
-\item{Systemet skal bestå af en manuel spændingsregulering}
-\item{Systemet skal kunne måle harmoniske}
-\item{Systemet burde bestå af en automatisk spændingsregulering}
-\item{Systemet kunne have en log}
-\item{Systemet kunne have flere belastninger}
-\item{Distributionslinjen kunne indeholde en decentral producent, som giver anledning til overspændinger på nettet}
-\item{Systemet vil ikke kunne fjerne harmoniske} 
+\item{Systemet \textbf{skal} bestå af en trinskifter 24/0-8V}
+\item{Systemet \textbf{skal} måle spænding, strøm og power factor centralt og decentralt}
+\item{Systemet \textbf{skal} vise data på en skærm}
+\item{Systemet \textbf{skal} simulere en distributionslinje og to forbrugere}
+\item{Systemet \textbf{skal} kunne reguleres manuelt}
+\item{Systemet \textbf{skal} måle harmoniske}
+\item{Systemet \textbf{burde} kunne reguleres automatisk}
+\item{Systemet \textbf{kunne} have en log}
+\item{Systemet \textbf{kunne} have flere end to forbrugere}
+\item{Distributionslinjen \textbf{kunne} indeholde en decentral producent}
+\item{Systemet \textbf{vil ikke} fjerne harmoniske} 
 \end{itemize}
 
