rettet til review 3

--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -12,7 +12,7 @@ I dette afsnit beskrives de funktionelle krav for systemet. Herunder usecase dia
 	\caption{Usecase Diagram}
 	\label{fig:UsecaseDiagram}
 \end{figure}
-Systemet indholder 3 usecases, der alle er initieret af brugeren. 
+Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatiske del af systemet er beskrevet i afsnit \ref{Automatisk mode}.
 
 \subsection{Aktør Beskrivelse}
 \textbf{Brugeren} er den primær aktør. Er en sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
@@ -128,3 +128,4 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren.
 
 
 \subsection{Beskrivelse af automatisk mode}
+\label{Afsnit: Automatisk mode}
