--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -4,24 +4,22 @@
 \section{Ikke funktionelle krav}
 
 \subsection{Spændingsregulator}
+\begin{enumerate}
+	\item Maks belastning af spændingsregulatoren er 20VA
+	\item Nominel spænding på primær siden er 24VAC
+	\item Nominel spænding på sekundær siden er 4VAC
+	\item Maks strøm er 5A	
+\end{enumerate}
 
-Måle spændingen ved transformatoren og belastningen op til 20 V+-10% \\
-Måle strøm (indsæt værdi) \\
-Måle faseforskydning/power factor \\
-Automatisk regulering fra 230V til 20V. \\
+\subsection{Måleenhed}
 
-
-\subsection{Distributionslinje}
-simulering af distributionslinje fra transformere til forbrugere  \\
-
-
-\subsection{Belastning}
-Forbruger simulering \\
-Belastning der variere $\pm$ (belastningsværdi)\\
+\begin{enumerate}
+	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V, $\pm$ 200mV 
+	\item Måle strømniveauet ved trinskifteren og forbrugerne mellem 0 og 5A, $\pm$ 100mA
+	\item Måle power factor $\pm$ 10$\%$
+\end{enumerate}
 
 
 
-\subsection{Brugergrænseflade}
-(Beskrivelse af skræm på PLC’en) \\
-Indsæt billede \\
+
 
