--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -141,6 +141,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
 \input{sektioner/Arkitektur/AllokeringsDiagram}
+\input{sektioner/Arkitektur/BrugerGraenseFlade}
 \input{sektioner/foranalyse}
 \printbibliography
 
