rettet til review

--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -129,3 +129,10 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatisk
 
 \subsection{Beskrivelse af automatisk mode}
 \label{Afsnit: Automatisk mode}
+
+\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figure/STM}
+	\caption{Beskrivelse af automatisk mode}
+	\label{fig:automode}
+\end{figure}
