HMI tilføjet til ikke funtionelle

--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -19,7 +19,25 @@
 	\item Måle power factor $\pm$ 10$\%$
 \end{enumerate}
 
+\subsection{Brugergrænseflade}
 
+\begin{enumerate}
+	\item Automatisk mode
+	\begin{figure}[htbp] % (alternativt [H])
+		\centering
+		\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
+		\caption{HMI Automatisk mode}
+		\label{fig:HMIAutomatikMode}
+	\end{figure}
+
+	\item Manuel mode
+	\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
+	\caption{HMI Manuel mode}
+	\label{fig:HMIManuelMode}
+	\end{figure}
+\end{enumerate}
 
 
 
