Brugergrænseflade tilføjet til ikke funktionelle

--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -25,15 +25,23 @@
 	\item Automatisk mode
 	\begin{figure}[htbp] % (alternativt [H])
 		\centering
-		\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
+		\includegraphics[width=0.9\textwidth]{Figure/HMIAutomatiskMode}
 		\caption{HMI Automatisk mode}
 		\label{fig:HMIAutomatikMode}
 	\end{figure}
 
+
+
+
+\newpage
+
+
+
+
 	\item Manuel mode
 	\begin{figure}[htbp] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
+	\includegraphics[width=0.9\textwidth]{Figure/HMIManuelMode}
 	\caption{HMI Manuel mode}
 	\label{fig:HMIManuelMode}
 	\end{figure}
